	  in the path
	- use dbpath for error messages with include database path in 
	  their text
	- don't set owner/group if binaries installed by "make install"
	- include <strings.h> on SCO
	- don't use cpio when installing packages <gulp>
	- fixed bug which affected dependencies on the Alpha
	- made '=' work for long arguments (the switch to popt broke this)
	- handle solaris systems better

2.3.10 -> 2.3.11:
	- fixed newlines in --scripts output
	- fix handling of source files with bad owners/groups

2.3.9 -> 2.3.10:
	- --allmatches handling in -e broke some cases
	- new predefined macros: %SOURCEn %PATCHn %SOURCEURLn %PATCHURLn
	- fix anomoly with %files -f <file> and %doc
	- ignore config bit when it's set on directories (which allows
	  users to replace directories with symlinks)
	- don't set config bit on directories
	- strip trailing slashes from files (during build)
	- %tags are now case sensitive (macros too)

2.3.8 -> 2.3.9:
	- reworked %setup to allow multiple -a and -b options, which
	  should noticeably ease the task of unapcking multiple tar files
	- md5 sum's were calculated incorrectly on big endian machines
	  from 2.3.2 through 2.3.8 -- this was fixed and some hacks were
	  done to keep verification working
	- updated README
	- added --allmatches to allow erasing multiple versions/releases
	  of a package
	- changed ftp URL's to use \r\n, not just \n (this should let RPM
	  work w/ some picky (but rfc compliant) ftp servers
	- fix problem where parts at end of spec file were dropped
	- added %config(noreplace missingok) (build-side)
	- simple spec file macros
	- should now process entire file list before failing
	
2.3.7 -> 2.3.8:
	- added -t? options to build packages from tarballs which contain
	  .spec files instead of from the .spec files directly
	- fixed error in man page where ftp URLs are discussed
	- don't strlen(NULL) in headerAddEntry()
	- minor portability changes
	- stopped building oldrpmdb.c as part of rpmlib