@@ -33,6 +33,8 @@
 	- fixed bug which affected dependencies on the Alpha
 	- made '=' work for long arguments (the switch to popt broke this)
 	- handle solaris systems better
+	- complain if critical rpmrc variables (cpiobin, gzipbin, etc) aren't
+	  set anywhere
 
 2.3.10 -> 2.3.11:
 	- fixed newlines in --scripts output
